# drivak

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
.github/workflows/: cmake-multi-platform.yml
docs/: PrivacyPolicy.md
include/config/: ConfigLoader.h  DrivakConfig.h  default_config.h  example_theme.h
include/core/: DataPaths.h  IgnoreFilter.h  ThemeConfig.h  ThemeLoader.h  example_ignore.h  vec2.h
include/gamedb/: GameDB.h  SaveUtils.h  Table.h
include/modding/: ModLoader.h  example_mods.h
include/renderer/: VulkanInterface.h  VulkanRenderer.h
include/screens/: MainMenuScreen.h  StartupScreen.h
include/ui/: MainWindow.h  UIButton.h  UIElement.h  UILabel.h  UIScreen.h  UIScreenManager.h  UIScrollScreen.h
src/: main.cpp
src/config/: ConfigLoader.cpp
src/core/: DataPaths.cpp  IgnoreFilter.cpp  ThemeLoader.cpp
src/gamedb/: GameDB.cpp  SaveUtils.cpp  Table.cpp
src/modding/: ModLoader.cpp
src/renderer/: VulkanInterface.cpp  VulkanRenderer.cpp
src/screens/: MainMenuScreen.cpp  StartupScreen.cpp
src/ui/: MainWindow.cpp  UIButton.cpp  UIElement.cpp  UILabel.cpp  UIScreen.cpp  UIScreenManager.cpp  UIScrollScreen.cpp
